// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`owner cap display renders non offender successfully 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <h1
          class="text-center"
        >
          Kevin
          's Roster 
        </h1>
        <br />
        <div
          class="row"
        >
          <div
            class="col"
          >
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <h3
                  class="card-title"
                >
                  Max Cap
                </h3>
                <h4
                  class="card-text"
                >
                  $
                  300
                </h4>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <h3
                  class="card-title"
                >
                  Luxary Tax Line
                </h3>
                <h4
                  class="card-text"
                >
                  $
                  165
                </h4>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <h3
                  class="card-title"
                >
                  Keeper Price
                </h3>
                <h4
                  class="card-text"
                >
                  $
                  143
                </h4>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="card bg-success"
            >
              <div
                class="card-body"
              >
                <h3
                  class="card-title"
                >
                  Remaining
                </h3>
                <h4
                  class="card-text"
                >
                  $
                  157
                   
                  <span>
                    + $
                    20
                     = $
                    177
                  </span>
                </h4>
              </div>
            </div>
          </div>
        </div>
        <br />
        <div
          class="progress"
          style="height: 60px;"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="47.66666666666667"
            class="progress-bar bg-success"
            role="progressbar"
            style="width: 47.66666666666667%;"
          >
            Under the Tax
          </div>
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="0"
            class="progress-bar bg-warning"
            role="progressbar"
            style="width: 0%;"
          >
            $ Over
          </div>
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="0"
            class="progress-bar bg-danger"
            role="progressbar"
            style="width: 0%;"
          >
            $ Penalty
          </div>
        </div>
        <br />
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h1
        class="text-center"
      >
        Kevin
        's Roster 
      </h1>
      <br />
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h3
                class="card-title"
              >
                Max Cap
              </h3>
              <h4
                class="card-text"
              >
                $
                300
              </h4>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h3
                class="card-title"
              >
                Luxary Tax Line
              </h3>
              <h4
                class="card-text"
              >
                $
                165
              </h4>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h3
                class="card-title"
              >
                Keeper Price
              </h3>
              <h4
                class="card-text"
              >
                $
                143
              </h4>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="card bg-success"
          >
            <div
              class="card-body"
            >
              <h3
                class="card-title"
              >
                Remaining
              </h3>
              <h4
                class="card-text"
              >
                $
                157
                 
                <span>
                  + $
                  20
                   = $
                  177
                </span>
              </h4>
            </div>
          </div>
        </div>
      </div>
      <br />
      <div
        class="progress"
        style="height: 60px;"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="47.66666666666667"
          class="progress-bar bg-success"
          role="progressbar"
          style="width: 47.66666666666667%;"
        >
          Under the Tax
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="progress-bar bg-warning"
          role="progressbar"
          style="width: 0%;"
        >
          $ Over
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="progress-bar bg-danger"
          role="progressbar"
          style="width: 0%;"
        >
          $ Penalty
        </div>
      </div>
      <br />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`owner cap display renders offender successfully 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <h1
          class="text-center"
        >
          Kevin
          's Roster 
        </h1>
        <br />
        <div
          class="row"
        >
          <div
            class="col"
          >
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <h3
                  class="card-title"
                >
                  Max Cap
                </h3>
                <h4
                  class="card-text"
                >
                  $
                  200
                </h4>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <h3
                  class="card-title"
                >
                  Luxary Tax Line
                </h3>
                <h4
                  class="card-text"
                >
                  $
                  110
                </h4>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="card"
            >
              <div
                class="card-body"
              >
                <h3
                  class="card-title"
                >
                  Keeper Price
                </h3>
                <h4
                  class="card-text"
                >
                  $
                  219
                </h4>
              </div>
            </div>
          </div>
          <div
            class="col"
          >
            <div
              class="card bg-danger"
            >
              <div
                class="card-body"
              >
                <h3
                  class="card-title"
                >
                  Remaining
                </h3>
                <h4
                  class="card-text"
                >
                  $
                  -128
                   
                </h4>
              </div>
            </div>
          </div>
        </div>
        <br />
        <div
          class="progress"
          style="height: 60px;"
        >
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="55"
            class="progress-bar bg-success"
            role="progressbar"
            style="width: 55.00000000000001%;"
          >
            Under the Tax
          </div>
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="54.50000000000001"
            class="progress-bar bg-warning"
            role="progressbar"
            style="width: 54.50000000000001%;"
          >
            $ Over
          </div>
          <div
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="54.50000000000001"
            class="progress-bar bg-danger"
            role="progressbar"
            style="width: 54.50000000000001%;"
          >
            $ Penalty
          </div>
        </div>
        <br />
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <h1
        class="text-center"
      >
        Kevin
        's Roster 
      </h1>
      <br />
      <div
        class="row"
      >
        <div
          class="col"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h3
                class="card-title"
              >
                Max Cap
              </h3>
              <h4
                class="card-text"
              >
                $
                200
              </h4>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h3
                class="card-title"
              >
                Luxary Tax Line
              </h3>
              <h4
                class="card-text"
              >
                $
                110
              </h4>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="card"
          >
            <div
              class="card-body"
            >
              <h3
                class="card-title"
              >
                Keeper Price
              </h3>
              <h4
                class="card-text"
              >
                $
                219
              </h4>
            </div>
          </div>
        </div>
        <div
          class="col"
        >
          <div
            class="card bg-danger"
          >
            <div
              class="card-body"
            >
              <h3
                class="card-title"
              >
                Remaining
              </h3>
              <h4
                class="card-text"
              >
                $
                -128
                 
              </h4>
            </div>
          </div>
        </div>
      </div>
      <br />
      <div
        class="progress"
        style="height: 60px;"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="55"
          class="progress-bar bg-success"
          role="progressbar"
          style="width: 55.00000000000001%;"
        >
          Under the Tax
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="54.50000000000001"
          class="progress-bar bg-warning"
          role="progressbar"
          style="width: 54.50000000000001%;"
        >
          $ Over
        </div>
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="54.50000000000001"
          class="progress-bar bg-danger"
          role="progressbar"
          style="width: 54.50000000000001%;"
        >
          $ Penalty
        </div>
      </div>
      <br />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
